# attendance_confirmation

./: .dockerignore  .env-template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: connection.py  main.py  model.py  persistence.py  security.py
app/database/: connection.py  model.py  persistence.py
app/infra/: auth_persistence.py  connection.py  gift_persistence.py  gifter_persistence.py  give_gift_persistence.py  guest_persistence.py
app/routes/: admin.py  auth.py  gift.py  gifter.py  give_gift.py  guest.py
