[project]
name = "attendance-confirmation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi==0.115.8",
    "pydantic[email]>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "sqlmodel==0.0.22",
    "uvicorn==0.34.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
]
